# muplar-dxmt

./: meson.options
.github/workflows/: sync-upstream.yml
src/: meson.build
src/airconv/: airconv_public.h  dxbc_binding_sm50.cpp  dxbc_converter.cpp  dxbc_converter.hpp  dxbc_converter_gs.cpp  dxbc_converter_ts.cpp  dxbc_signature.cpp  meson.build
src/airconv/nt/: dxbc_binding_map.hpp  dxbc_converter_base.cpp
src/d3d10/: d3d10_blob.cpp  d3d10_blob.hpp  d3d10_device.cpp
src/d3d11/: d3d11_context_def.cpp  d3d11_context_imm.cpp  d3d11_device.cpp  d3d11_device.hpp  d3d11_resource.hpp  d3d11_texture_device.cpp
src/d3d12/: d3d12.cpp  d3d12.def  d3d12_buffer.cpp  d3d12_command_allocator.cpp  d3d12_command_allocator.hpp  d3d12_command_encoder.hpp  d3d12_command_list.cpp  d3d12_command_queue.cpp  d3d12_descriptor_heap.hpp  d3d12_device.cpp  d3d12_device.hpp  d3d12_device_child.hpp  d3d12_heap.cpp  d3d12_pipeline_graphics.cpp  d3d12_query_heap.cpp  d3d12_root_signature.cpp  d3d12_sampler.cpp  d3d12_swapchain.cpp  d3d12_texture.cpp  meson.build
src/dxgi/: dxgi_factory.cpp  dxgi_interfaces.h  dxgi_resource.hpp
src/dxmt/: dxmt_command.cpp  dxmt_command.hpp  dxmt_command.metal  dxmt_command_constants.hpp  dxmt_keyed_mutex.cpp  dxmt_keyed_mutex.hpp  meson.build
src/util/: util_d3dkmt.h
src/util/com/: com_guid.cpp
src/winemetal/unix/: winemetal_unix.c
